@@ -1,1 +1,1 @@
-Bugfix release for CygWin
+Bugfix for script/autostart.sh
